updated: nav and its color

--- a/css/style.css
+++ b/css/style.css
@@ -30,7 +30,7 @@ header h1 {
 
 /* Style rules for navigation area */
 nav {
-    background-color: #373684;
+   background-image: linear-gradient(to right, white, #0187cb, #44b8bc);
 }
 nav ul {
     list-style-type: none;
